# bammi

./: CMakeLists.txt  README.md  build.bat
cmake/: FindSDL2.cmake
public/: bammi.html  bammi.wasm
src/: BammiBoard.cpp  BammiBoard.h  Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  CollisionRect.cpp  CollisionRect.h  DoubleKeyMap.h  Engine.cpp  Engine.h  ErrorHandler.h  Game.cpp  Game.h  Grid.h  InputHandler.cpp  InputHandler.h  Math.h  PlayerManager.cpp  PlayerManager.h  Primitives.cpp  Primitives.h  Random.cpp  Random.h  RectangleDraw.h  SpreadEffect.cpp  SpreadEffect.h  Sprite.cpp  Sprite.h  StreamQuad.cpp  StreamQuad.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  UIStateHandler.cpp  UIStateHandler.h  Vector2.h  WindowHandler.cpp  (+4 more)
src/Optick/: CMakeLists.txt
